[gd_scene load_steps=5 format=3 uid="uid://b6vd3pvaya63h"]

[ext_resource type="Script" path="res://Project/Script/gold_mine.gd" id="1_5pfmx"]
[ext_resource type="Texture2D" uid="uid://dfo3ekhwu0obs" path="res://Assets/Objects/Gold tree.png" id="1_mcrs0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13dqx"]
size = Vector2(83, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_lapou"]
radius = 81.0987

[node name="GoldMine" type="StaticBody2D" node_paths=PackedStringArray("_sprite2D")]
script = ExtResource("1_5pfmx")
_sprite2D = NodePath("Texture")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_mcrs0")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 33)
shape = SubResource("RectangleShape2D_13dqx")

[node name="GoldMineArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="GoldMineArea"]
shape = SubResource("CircleShape2D_lapou")

[connection signal="body_entered" from="GoldMineArea" to="." method="_on_gold_mine_area_body_entered"]
[connection signal="body_exited" from="GoldMineArea" to="." method="_on_gold_mine_area_body_exited"]
